welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:12: error: value Yellow is not a member of object java.awt.Color
	setCouleurBrosse(Color.Yellow)
                               ^