welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def quadrille() {
	avance
	baisseBrosse
	leveBrosse
}
def gogogo(cases:Int) {
	for (nb <- 1 to cases)
	avance
}
def oneFlower(c:Color) {
	setCouleurBrosse(Color.Yellow)
	quadrille
	setCouleurBrosse(c)
	quadrille
	gauche
	for (nb <- 1 to 3) {
		avance
		gauche
		quadrille
	}
}
def growFlowers() {
	oneFlower(Color.RED)
	avance
	droite
	avance
	gauche
	oneFlower(Color.ORANGE)
	avance
	droite
	avance
	droite
	oneFlower(Color.GREEN)
	gauche
	gogogo(5)
	gauche
	avance
	retourne
	oneFlower(Color.CYAN)
	droite
	gogogo(3)
	droite
	gogogo(5)
	retourne
}
